fix: fix authentication & security flow